--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+<title>Nicky's Website</title>
+<link rel="stylesheet" type="text/css" href="navBar.css">
+<style>
+
+
+div {
+	padding-top: 50px;
+	height: 300px;
+	width: 100%;
+	border-style: solid;
+
+}
+
+</style>
+<script>
+// alert('here');
+</script>
+</head>
+
+<body>
+
+<ul class="navBar">
+	<li style="float: left"><a href="#home">Home</a></li>
+	<li><a href="#contact">Contact</a></li>
+	<li><a href="#skill">Project</a></li>
+	<li><a href="#experience">Experience</a></li>
+	<li><a href="#skill">Skill</a></li>
+</ul>
+
+<div id="home">Home</div>
+<div id="skill">Skill</div>
+<div id="experience">Experience</div>
+<div id="project">Project</div>
+<div id="contact">Contact</div>
+
+</body>
+</html>
