--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div {
 	padding-top: 50px;
 	height: 300px;
 	width: 100%;
-	border-style: solid;
+	border-style: dotted;
 
 }
 
@@ -25,7 +25,7 @@ div {
 <ul class="navBar">
 	<li style="float: left"><a href="#home">Home</a></li>
 	<li><a href="#contact">Contact</a></li>
-	<li><a href="#skill">Project</a></li>
+	<li><a href="#project">Project</a></li>
 	<li><a href="#experience">Experience</a></li>
 	<li><a href="#skill">Skill</a></li>
 </ul>
