add skill; add color; add margin

--- a/html/skill.html
+++ b/html/skill.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+
+
+
+</style>
 </head>
 <body>
-skill
+<h1>Skill</h1>
+<ul><li>
+	<h3>Programming language</h3>
+	<ul>
+	<li>C / C++ (90%)</li>
+	<li>Java (90%)</li>
+	<li>Python (80%)</li>
+	<li>Html / CSS / Javascript (70%)</li>
+	</ul>
+	</li>
+	<li>
+	<h3>Other skill</h3>
+	<ul>
+	<li>Server / TCP network programming</li>
+	<li>Object-oriented programming</li>
+	<li>Git / Version control</li>
+	<li>Linux / Shell</li>
+	<li>Network management / Network security</li>
+	<li>Software-defined network</li>
+	</ul>
+	</li>
+</ul>
 </body>
 </html>
