--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8"> 
 <link rel="stylesheet" type="text/css" href="./css/navBar.css" />
 <link rel="stylesheet" type="text/css" href="./css/content.css" />
+<link rel="stylesheet" type="text/css" href="./css/skill.css" />
 <script src="js/include.js"></script>
 <style>
 
