new color; add home

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8"> 
 <link rel="stylesheet" type="text/css" href="./css/navBar.css" />
 <link rel="stylesheet" type="text/css" href="./css/content.css" />
+<link rel="stylesheet" type="text/css" href="./css/home.css" />
 <link rel="stylesheet" type="text/css" href="./css/skill.css" />
 <script src="js/include.js"></script>
 <style>
@@ -18,7 +19,7 @@
 <body>
 <div include-html="./html/navBar.html"></div>
 
-<div class="content" id="home">Home</div>
+<div class="content" id="home" include-html="./html/home.html"></div>
 <div class="content" id="skill" include-html="./html/skill.html"></div>
 <div class="content" id="experience">Experience</div>
 <div class="content" id="project">Project</div>
