--- a/html/skill.html
+++ b/html/skill.html
@@ -9,16 +9,14 @@
 </head>
 <body>
 <h1>Skill</h1>
-<ul><li>
+<div id="programmingLanguage">
 	<h3>Programming language</h3>
-	<ul>
-	<li>C / C++ (90%)</li>
-	<li>Java (90%)</li>
-	<li>Python (80%)</li>
-	<li>Html / CSS / Javascript (70%)</li>
-	</ul>
-	</li>
-	<li>
+	<div class="outProgress"><div id="inProgress">C / C++ (90%)</div></div>
+	<div class="outProgress">Java (90%)</div>
+	<div class="outProgress">Python (80%)</div>
+	<div class="outProgress">Html / CSS / Javascript (70%)</div>
+</div>
+<div class="subContent" id="otherSkill">
 	<h3>Other skill</h3>
 	<ul>
 	<li>Server / TCP network programming</li>
@@ -28,7 +26,6 @@
 	<li>Network management / Network security</li>
 	<li>Software-defined network</li>
 	</ul>
-	</li>
-</ul>
+</div>
 </body>
 </html>
