--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <div class="content" id="home" include-html="./html/home.html"></div>
 <div class="content" id="skill" include-html="./html/skill.html"></div>
 <div class="content" id="experience">Experience</div>
-<div class="content" id="project">Project</div>
-<div class="content" id="contact">Contact</div>
+<div class="content" id="project" style="background-color: #f39c12">Project</div>
+<div class="content" id="contact" style="background-color: #4527A0">Contact</div>
 
 <script>
 includeHTML();
