--- a/html/home.html
+++ b/html/home.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	
+<style>
+
+</style>
 </head>
 <body>
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
+<div class="card">
+	<img src="./pic/GGme.jpg" alt="my photo" style="width: 100%" />
+	<div class="container">
+		<h3>I can write something here : )</h3>
+	</div>
+</div>
 </body>
 </html>
