fix nav bar issue

--- a/html/project.html
+++ b/html/project.html
@@ -5,7 +5,7 @@
 <body>
 	<h1>Project</h1>
 	<ul>
-	<li>Bomberman.io
+	<li><a href="">Bomberman.io</a>
 		<ul><li>- Online bomberman game</li>
 			<li>- HTML, javascript, CSS, canvas, node.js</li>
 			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fa fa-github" aria-hidden="true"></i></a></li>
