--- a/html/project.html
+++ b/html/project.html
@@ -5,7 +5,7 @@
 <body>
 	<h1>Project</h1>
 	<ul>
-	<li><a href="">Bomberman.io</a>
+	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
 		<ul><li>- Online bomberman game</li>
 			<li>- HTML, javascript, CSS, canvas, node.js</li>
 			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fa fa-github" aria-hidden="true"></i></a></li>
@@ -13,15 +13,15 @@
 	</li><br/>
 
 	<li>EasyChat
-		<ul><li>- GUI chatroom</li>
-			<li>- Java</li>
+		<ul><li>- GUI chatroom that can send file, img etc.</li>
+			<li>- Java, swing</li>
 			<li>- <a href="https://github.com/st945306/easyChat"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 
-	<li>Vocabuilder
+	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/vocab/vocab.html">Vocabuilder</a>
 		<ul><li>- Vocabulary builder that can use user-provided vocabulary</li>
-			<li>- HTML, CSS, javascript</li>
+			<li>- HTML, CSS, javascript, json, java</li>
 			<li>- 	<a href="https://github.com/st945306/myWebsite/tree/master/vocab">
 						<i class="fa fa-github" aria-hidden="true"></i>
 					</a>
@@ -37,7 +37,7 @@
 	</li><br/>
 	
 	<li>Lunch decider
-		<ul><li>- smart app that can decide a proper restaurant for your next meal</li>
+		<ul><li>- Smart app that can decide a proper restaurant for your next meal</li>
 			<li>- Android, java, XML</li>
 			<li>- <a href="https://github.com/st945306/Lunch-Decider"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 		</ul>
@@ -59,20 +59,20 @@
 		</ul>
 	</li><br/>
 	
-	<li>Self-driving car
+	<li><a href="./pic/car.jpg">Self-driving car</a>
 		<ul><li>- Self-driven car with road detection and traffic light system</li>
 			<li>- Arduino, python</li>
 		</ul>
 	</li><br/>
 	
-	<li>LeetCode write-up
+	<li><a href="https://leetcode.com/">LeetCode</a> write-up
 		<ul><li>- Try to solve every problem on Leetcode</li>
 			<li>- C, C++</li>
 			<li>- <a href="https://github.com/CheshireCatNick/leetcode"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 	
-	<li>My website (old)
+	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/">My website (old)</a>
 		<ul><li>- Last version of my personal website</li>
 			<li>- HTML, CSS, javascript, bootstrap</li>
 			<li>- <a href="https://github.com/st945306/myWebsite"><i class="fa fa-github" aria-hidden="true"></i></a></li>
