--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="./css/content.css" />
 <link rel="stylesheet" type="text/css" href="./css/home.css" />
 <link rel="stylesheet" type="text/css" href="./css/skill.css" />
-
+<link rel="stylesheet" type="text/css" href="./css/experience.css" />
 <link rel="stylesheet" type="text/css" href="./css/project.css" />
 
 <script src="./js/include.js"></script>
@@ -22,7 +22,7 @@
 
 <div class="content" id="home" include-html="./html/home.html"></div>
 <div class="content" id="skill" include-html="./html/skill.html"></div>
-<div class="content" id="experience">Experience</div>
+<div class="content" id="experience" include-html="./html/experience.html"></div>
 <div class="content" id="project" include-html="./html/project.html"></div>
 <div class="content" id="contact" style="background-color: #008CBA">Contact</div>
 
