--- a/html/experience.html
+++ b/html/experience.html
@@ -9,12 +9,12 @@
 	<br/>
 	<li>Network administrator in NTU CSIE
 		<ul><li>- Familiar with firewall such as Fortigate, pfSense</li>
-			<li>- Familiar with linux network tools</li>
+			<li>- Familiar with Linux network tools</li>
 			<li>- Familiar with network structure and device</li>
 		</ul>
 	</li>
 	<br/>
-	<li>Teaching assistant in network class
+	<li>Teaching assistant in network course
 		<ul><li>- Teach and train students for network administration</li>
 		</ul>
 	</li>
