add name and email address

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 	<h1>Contact</h1>
+	<input type="text" id="name" style="width: 25%">
+	<input type="text" id="emailAddress" style="width: 25%">
 	<input type="text" id="content" style="width: 50%">
 	<button type="button" onclick="send()">Send</button>
 
