--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="./css/contact.css" />
 
 <script src="./js/include.js"></script>
+<script src="./js/animation.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <style>
 
@@ -31,44 +32,6 @@
 <script>
 includeHTML();
 
-var timer;
-function addWidth(C, J, P, H, CDelta, JDelta, PDelta, HDelta, maxC){
-	var	CWidth = parseFloat(C.style.width);
-	var	JWidth = parseFloat(J.style.width);
-	var	PWidth = parseFloat(P.style.width);
-	var	HWidth = parseFloat(H.style.width);
-	if (CWidth >= maxC){
-		clearInterval(timer);
-		return;
-	}
-	C.style.width = CWidth + CDelta + "%";
-	J.style.width = JWidth + JDelta + "%";
-	P.style.width = PWidth + PDelta + "%";
-	H.style.width = HWidth + HDelta + "%";
-}
-
-function moveProgressBar(){
-	var C = document.getElementById("C");
-	var J = document.getElementById("java");
-	var P = document.getElementById("python");
-	var H = document.getElementById("html");
-
-	var maxC = 90, maxJ = 90, maxP = 80, maxH = 70;
-	
-	var animationTime = 4000;
-	var addWidthPeriod = 30;
-	var addWidthNum = animationTime / addWidthPeriod;
-	var CDelta = maxC / addWidthNum;
-	var JDelta = maxJ / addWidthNum;
-	var PDelta = maxP / addWidthNum;
-	var HDelta = maxH / addWidthNum;
-
-	C.style.width = "1%";
-	J.style.width = "1%";
-	P.style.width = "1%";
-	H.style.width = "1%";
-	timer = setInterval(function(){addWidth(C, J, P, H, CDelta, JDelta, PDelta, HDelta, maxC);}, addWidthPeriod);
-}
 var timePeriod = 8000;
 setInterval(moveProgressBar, timePeriod);
 
@@ -76,10 +39,12 @@ var ip = "127.0.0.1";
 var port = 2147;
 var socket = io.connect("http://" + ip + ":" + port);
 function send(){
+	var name = document.getElementById("name").value;
+	var emailAddress = document.getElementById("emailAddress").value;
 	var content = document.getElementById("content").value;
 
-	socket.emit("sendEmail", content);
-	alert("Your email has been sent.  I'll reply ASAP. Thanks for your contact!");
+	socket.emit("sendEmail", name, emailAddress, content);
+	alert("Your message has been sent.  I'll reply ASAP. Thanks for your contact!");
 }
 </script>
 </body>
