finish button and textarea; contact style done

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,12 +4,14 @@
 </head>
 <body>
 	<h1>Contact</h1>
-	<input type="text" id="name" style="width: 25%">
-	<input type="text" id="emailAddress" style="width: 25%">
-	<input type="text" id="content" style="width: 50%">
-	<button type="button" onclick="send()">Send</button>
-
-
-
+	<h3>Send me a message! I'd be glad to hear from you!</h3>
+	<input type="text" id="name" placeholder="Name">
+	<br/>
+	<input type="text" id="emailAddress" placeholder="Email address">
+	<br/>
+	<textarea id="content" placeholder="Anything you want to say..."></textarea>
+	<button type="button" onclick="send()">
+		<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+	</button>
 </body>
 </html>
