--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <div class="content" id="project" include-html="./html/project.html"></div>
 <div class="content" id="contact" include-html="./html/contact.html"></div>
 
+<div class="content" id="footer">footer</div>
 <script>
 includeHTML();
 
