switch back to http

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<h1>Contact</h1>
-	<h3>Send me a message! I'd be glad to hear from you!</h3>
+	<h3>Send me a message. I'd be glad to hear from you!</h3>
 	<input type="text" id="name" placeholder="Name">
 	<br/>
 	<input type="text" id="emailAddress" placeholder="Email address">
