--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
 <body>
 	<h1>Contact</h1>
 	<h3>Send me a message. I'd be glad to hear from you!</h3>
-	<input type="text" id="name" placeholder="Name">
+	<input type="text" id="name" placeholder="Name"></input>
 	<br/>
 	<input type="text" id="emailAddress" placeholder="Email address"></input>
 	<br/>
