change animation time; add notification system

--- a/html/contact.html
+++ b/html/contact.html
@@ -13,5 +13,6 @@
 	<button type="button" onclick="send()">
 		<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
 	</button>
+	<div id="notification"></div>
 </body>
 </html>
