--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@ var port = 2147;
 var socket = io.connect("http://" + ip + ":" + port);
 socket.on("sendResult", function(result){
 	if (result == "success"){
-		alert("Your message has been sent. I'll reply ASAP. Thanks for your contact!");
+		showNotification("Your message has been sent. I'll reply ASAP. Thanks for your contact!",
+							"success");
 		document.getElementById("name").value = "";
 		document.getElementById("emailAddress").value = "";
 		document.getElementById("content").value = "";
 	}
 	else
-		alert("You sent too many emails today. Come back tomorrow : )");
+		showNotification("You sent too many emails today. Come back tomorrow : )",
+			"warning");
 });
 function send(){
 	var name = document.getElementById("name").value;
@@ -56,7 +58,28 @@ function send(){
 	if (socket.connected)
 		socket.emit("sendEmail", name, emailAddress, content);
 	else
-		alert("Sorry. My mail sender is down : (\nPlease send your message to CheshireCatNick@gmail.com");
+		showNotification("Sorry. My mail sender is down : (<br/>Please send your message to CheshireCatNick@gmail.com",
+							"warning");
+}
+
+function showNotification(msg, type){
+	var notification = document.getElementById("notification");
+	notification.className = "show";
+	notification.innerHTML = msg;
+	var backgroundColor, fontColor;
+	if (type == "success"){
+		backgroundColor = "#0077B5";
+		fontColor = "white";
+	}
+	else if (type == "warning"){
+		backgroundColor = "#BD362F";
+		fontColor = "white";
+	}
+	notification.style.backgroundColor = backgroundColor;
+	notification.style.color = fontColor;
+	setTimeout(function(){
+		notification.className = "";
+	}, 11000);
 }
 </script>
 </body>
