--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="./css/experience.css" />
 <link rel="stylesheet" type="text/css" href="./css/project.css" />
 <link rel="stylesheet" type="text/css" href="./css/contact.css" />
+<link rel="stylesheet" type="text/css" href="./css/footer.css" />
 
 <script src="./js/include.js"></script>
 <script src="./js/animation.js"></script>
@@ -29,7 +30,7 @@
 <div class="content" id="project" include-html="./html/project.html"></div>
 <div class="content" id="contact" include-html="./html/contact.html"></div>
 
-<div class="content" id="footer">footer</div>
+<div class="content" id="footer" include-html="./html/footer.html"></div>
 <script>
 includeHTML();
 
