change programming style to settimeout; change copyright; try to add a type

--- a/html/footer.html
+++ b/html/footer.html
@@ -3,7 +3,8 @@
 <head>
 </head>
 <body>
-	<p>&copy 2016 website designed by Nicky Chao 
+	<p><i class="fa fa-copyright" aria-hidden="true"></i>
+		 2016 website designed by Nicky Chao 
 		<a href="mailto: cheshireCatNick@gmail.com">CheshireCatNick@gmail.com</a>
 	</p>
 </body>
