--- a/html/home.html
+++ b/html/home.html
@@ -3,16 +3,22 @@
 <head>
 	
 <style>
-
+#typeDisplayer{
+	border: 3px solid;
+	font-size: 35px;
+}
 </style>
 </head>
 <body>
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
+<div id="typeDisplayer"></div>
+<!--
 <div class="card">
 	<img src="./pic/GGme.jpg" alt="" style="width: 100%" />
 	<div class="container">
 		<h3></h3>
 	</div>
 </div>
+-->
 </body>
 </html>
