add another bar: js

--- a/html/skill.html
+++ b/html/skill.html
@@ -26,8 +26,13 @@
 		</div>
 	</div>
 	<div class="outProgress">
-		<div class="inProgress" id="html" style="width: 70%; background-color: #FF9800">
-			<span>HTML / CSS / Javascript</span>
+		<div class="inProgress" id="html" style="width: 75%; background-color: #FFEB3B">
+			<span>HTML / CSS</span>
+		</div>
+	</div>
+	<div class="outProgress">
+		<div class="inProgress" id="js" style="width: 65%; background-color: #FF9800">
+			<span>Javascript / node.js</span>
 		</div>
 	</div>
 </div>
