add updates at footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -3,6 +3,57 @@
 <head>
 </head>
 <body>
+	<h1>Website updates and developer note</h1>
+	<ul>
+	<li>2016-08-17 
+		<ul><li>- Finish typing animation.</li>
+			<li>- Rewrite progress bar animation with Javascript OOP.</li>
+			<li>- Progress bar animation now has acceleration.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-15
+		<ul><li>- Finish footer.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-13
+		<ul><li>- Replace alert with a notification system. Sweet!</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-12
+		<ul><li>- Finish contact.</li>
+			<li>- Finish mail sender with node.js. Visitor can send email now.</li>
+			<li>- Use package.json for npm controll.</li>
+			<li>- Move the whole website to CSIE workstation due to https issue.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-11
+		<ul><li>- Finish experience.</li>
+			<li>- Add project links.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-06
+		<ul><li>- Finish project.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-07-30
+		<ul><li>- Finish skill with animated progress bar.</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-07-29
+		<ul><li>- This is when I start building this website.</li>
+			<li>- "Include html" system.</li>
+			<li>- Finish basic structure and navigation bar.</li>
+		</ul>
+	</li><br/>
+
+	</ul>
 	<p><i class="fa fa-copyright" aria-hidden="true"></i>
 		 2016 website designed by Nicky Chao 
 		<a href="mailto: cheshireCatNick@gmail.com">CheshireCatNick@gmail.com</a>
