checl sender availability

--- a/html/footer.html
+++ b/html/footer.html
@@ -6,6 +6,14 @@
 	<h1>Website updates and developer note</h1>
 	<ul>
 	<li>2016-08-17 
+		<ul><li>- Check name, email and message validation. Thanks to Kevin Hwa.</li>
+			<li>- Now I can check availability of my mail sender by clicking 
+				<span id="testMailSender" onclick="checkMailSender();">here</span>.
+			</li>
+		</ul>
+	</li><br/>
+
+	<li>2016-08-16 
 		<ul><li>- Finish typing animation.</li>
 			<li>- Rewrite progress bar animation with Javascript OOP.</li>
 			<li>- Progress bar animation now has acceleration.</li>
