--- a/projects/dexon-rng/random.html
+++ b/projects/dexon-rng/random.html
@@ -1,11 +1,31 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" 
+        integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" 
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
 </head>
 <body>
-    <h2>DEXON RNG</h2>
-    <div id="display"></div>
+    <div class="jumbotron">
+        <h1 class="display-4">DEXON RNG</h1>
+        <p class="lead">This is a free random number generator utilizing on-chain randomness from DEXON.</p>
+    </div>
+    <table class="table" id="blocks-table">
+        <thead>
+            <tr>
+            <th scope="col">#</th>
+            <th scope="col">Block Height</th>
+            <th scope="col">Block Hash</th>
+            <th scope="col">Randomness</th>
+            </tr>
+        </thead>
+        <tbody>
+        </table>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 <script>
     const web3 = new Web3();
@@ -14,13 +34,17 @@
     (async () => {
         const blockNumber = await web3.eth.getBlockNumber();
         const block = await web3.eth.getBlock(blockNumber);
-        const result = `block #${blockNumber}, randomness: ${block.randomness}`;
-        document.getElementById("display").innerHTML = result;
+        const blocksTable = document.getElementById("blocks-table");
+        const raw = blocks.insertRow(0);
+        const cellBlockNumber = row.insertCell(0);
+        const cellBlockHash = row.insertCell(1);
+        const cellRandomness = row.insertCell(2);
+        cellBlockNumber.innerHTML = blockNumber;
+        cellBlockHash.innerHTML = "hash";
+        cellRandomness.innerHTML = block.randomness;
     })();
 </script>
 <style>
-    body {
-        font-family: sans-serif
-    }
+    
 </style>
 </html>
