--- a/projects/dexon-rng/index.html
+++ b/projects/dexon-rng/index.html
@@ -28,7 +28,7 @@
             <span class="input-group-text">max</span>
         </div>
         <input type="text" class="form-control" value="100" placeholder="100" aria-label="100" aria-describedby="basic-addon1" id="max">
-        <button type="button" class="btn" style="border-color: #954A97; color: #954A97" onclick="getRN()">Generate</button>
+        <button type="button" class="gen-btn btn" onclick="getRN()">Generate</button>
     </div>
     <div class="input-group mb-3">     
             <div class="input-group-prepend">
@@ -56,6 +56,7 @@
 </body>
 <script>
     function getRN() {
+        alert('clicked');
         const min = parseInt(document.getElementById("min").value);
         const max = parseInt(document.getElementById("max").value) + 1;
         const result = document.getElementById("result");
@@ -112,6 +113,14 @@
         max-height: 500px;
         overflow-y: auto;
         font-size: 15px;
+    }
+    .gen-btn {
+        border-color:#954A97;
+        color:#954A97;
+    }
+    .gen-btn:hover {
+        color: #ffffff;        
+        background-color: #954A97;
     }
 </style>
 </html>
