--- a/projects/dexon-rng/index.html
+++ b/projects/dexon-rng/index.html
@@ -6,7 +6,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
-    <script src="http://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script>
+    <script src="https://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script>
 </head>
 <body>
     <div class="container">
